--- a/Ceramica/package.json
+++ b/Ceramica/package.json
@@ -26,6 +26,7 @@
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-minify": "^3.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-ttf2woff2": "^4.0.1",
