--- a/Ceramica/package.json
+++ b/Ceramica/package.json
@@ -32,6 +32,7 @@
     "gulp-ttf2woff2": "^4.0.1",
     "gulp-typescript": "^6.0.0-alpha.1",
     "sass": "^1.53.0",
+    "swiper": "^8.3.2",
     "typescript": "^4.7.4"
   }
 }
